# elk-compiler

./: .gitignore  README.md  elk-compiler.cabal  fourmolu.yaml
.zed/: tasks.json
app/: Main.hs
src/: AST.hs  Lexer.hs  Parser.hs  Token.hs
src/AST/: CustomType.hs  Function.hs  Program.hs  Syntax.hs  Type.hs
src/Parser/: CustomType.hs  Function.hs  Program.hs
syntax/: basic.elk  sample_c.txt  sample_ml.txt  syntax.md
test/: LexerSpec.hs  Spec.hs  Suite.hs
test/Parser/: CustomTypeSpec.hs  FunctionSpec.hs  ProgramSpec.hs  TypeSpec.hs
