cabal-version: 3.0
name:          elk-compiler
version:       0.0.1.0
maintainer:    rubenjr0@protonmail.com
author:        Rubén J.R.
category:      Language

library
    exposed-modules:
        AST
        AST.Type
        AST.CustomType
        AST.Function
        Lexer
        Parser
        Parser.CustomType
        Parser.Function
        Parser.Program
        Token

    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        megaparsec >=9.6.1 && <9.7,
        text >=2.1.1 && <2.2

executable elk-compiler
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        megaparsec >=9.6.1 && <9.7,
        text >=2.1.1 && <2.2,
        elk-compiler

test-suite elk-compiler-test
    type:             exitcode-stdio-1.0
    main-is:          Suite.hs
    hs-source-dirs:   test
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.0.0,
        megaparsec >=9.6.1 && <9.7,
        text >=2.1.1 && <2.2,
        hspec,
        elk-compiler
